2004-05-01 Theodore Kilgore <kilgota@auburn.edu>

	* configure.in: Hook up camlibs/mars


2004-04-08  Raymond Penners  <raymond@dotsphinx.com>

	* camlibs/sonydscf55: Merged in patch from Alberto Garlassi:
	serial communication fixes on fast CPUs, and the native file names
	are now used (instead of using the hardcoded "dsc%05d.jpg").


2004-01-06 Marcus Meissner <marcus@jet.franken.de>

	* Multiple USB camera support.

2003-11-19 Theodore Kilgore <kilgota@auburn.edu> 

	* configure.in: Hook up camlibs/aox (driver by Theodore Kilgore).


2003-11-16  Patrick Mansfield <patmans@users.sourceforge.net>

	* libgphoto2 gphoto2-camera.c, gphoto2-result.c, gphoto2-result.h:
	  Return GP_ERROR_CAMERA_BUSY if a command or I/O is in progress.

2003-08-27  Christophe Barbe <christophe@ufies.org>

	* libgphoto2/gphoto2-filesys.c: Return the max when unable to know 
	  the available memory instead of failing to build.

2003-06-26  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: Hook up camlibs/sq905 (driver by Theodore Kilgore
	  <kilgota@banach.math.auburn.edu).

2003-06-22  Christophe Barbe <christophe@ufies.org>

	* gphoto2/main.c, po/*.po:
	  s/gphoto-devel@gphoto.org/gphoto-devel@lists.sourceforge.net/

2003-05-26  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: 2.1.2rc1, with CVS tag
	* libgphoto2/gphoto2-ability-list.c: replace colon by space

2003-05-17  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: 2.1.2dev9, with CVS tags
	* configure.in: 2.1.2dev10, without CVS tags, for development

2003-05-12  Marcus Meissner <marcus@jet.franken.de>

	* configure.in: disabled gsmart, benq, spca504_flash camlibs
	  (now replaced by spca50x camlib).
	  Handle camlibs with - in the name by replacing it with _.

2003-05-12  Hans Ulrich Niedermann  <gp@n-dimensional.de>

	* configure.in: 2.1.2dev8

2003-05-12  Marcus Meissner  <meissner@suse.de>
	
	* configure.in: added agfa-cl20 driver (from cl20.poeml.de).
	* CHANGES: adapted.